0.3.4:
Sam Lantinga - Fri Mar  3 13:25:10 PST 2000
 * Fixed MP3 audio on big-endian systems
Sam Lantinga - Wed Mar  1 07:02:17 PST 2000
 * The control panel for the gtv player is placed in the upper left.
Sam Lantinga - Wed Mar  1 00:26:49 PST 2000
 * If the audio couldn't be opened, the error is propogated to the user.
Sam Lantinga - Wed Mar  1 00:18:42 PST 2000
 * The audio decoder thread now runs while the movie is paused.
Sam Lantinga - Tue Feb 29 15:22:52 PST 2000
 * Added a hack to seek past raw video data in a system stream.
Sam Lantinga - Tue Feb 29 10:57:14 PST 2000
 * Fixed pause and loop, with and without audio.
Sam Lantinga - Mon Feb 28 20:28:24 PST 2000
 * Removed special SDL mixer support - not necessary.  See README.SDL_mixer.
Sam Lantinga - Mon Feb 28 12:45:59 PST 2000
 * Fixed a problem where audio stopped playing before the end of the movie.
Sam Lantinga - Thu Feb 10 13:17:29 PST 2000
 * Don't crash if a picture block comes before a sequence header block.
Sam Lantinga - Sat Feb  5 08:56:25 PST 2000
 * Remove autogenerated files from CVS.
Bill Kendrick - Thu Feb 03 16:57:27 PST 2000
 * Does not init. audio or video unless necessary for the MPEG being played.
 * If audio or video are unavailable, does not exit, just skips (or plays
   whichever stream it can).
Bill Kendrick - Sat Jan 22 17:32:00 PST 2000
 * Added --version to plaympeg and made usage help more complete.
Sam Lantinga - Mon Jan 24 12:57:54 PST 2000
 * Disabled consistency checks by default, now plays more video streams
Laurent Bonnaud - Tue Jan 25 13:46:32 PST 2000
 * Speeded up cropping by using an inline function

0.3.3:
Sam Lantinga - Mon Jan 17 19:52:32 PST 2000
 * Updated for the new SDL mixer library release (1.0.3)
Sam Lantinga - Tue Jan 11 16:17:50 PST 2000
 * Fixed so SMPEG compiles on stock RedHat 5.2 systems
Stephane Peter, Sam Lantinga - Thu Jan  10 15:22:33 PST 2000
 * Fixed playing mono MP3 files on stereo audio output
Sam Lantinga - Thu Jan  6 13:02:32 PST 2000