@@ -73,12 +73,14 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-, root, root)
 %doc CHANGES COPYING README
 %{prefix}/lib/lib*.so.*
-%{prefix}/bin/*
+%{prefix}/bin/plaympeg
+%{prefix}/bin/gtv
 %{prefix}/man/*
 
 %files devel
 %defattr(-, root, root)
 %doc CHANGES COPYING README
+%{prefix}/bin/@PACKAGE@-config
 %{prefix}/include/*
 %{prefix}/lib/lib*.a
 %{prefix}/lib/lib*.so
